bootstrap/3-config/k8s/gmp/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gmp-public
  labels:
    app: frontend  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: "gke.gcr.io/prometheus-engine/frontend:v0.5.0-gke.0"
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests: 
            memory: "128Mi"
            cpu: "50m"        
        args:
        - "--web.listen-address=:9090"
        - "--query.project-id=<PROJECT_ID>"
        ports:
        - name: web
          containerPort: 9090
        readinessProbe:
          httpGet:
            path: /-/ready
            port: web
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: web
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: gmp-public
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"gmp"}}'  
spec:
  selector:
    app: frontend
  ports:
  - name: web
    port: 80
    targetPort: 9090
